fix temporally number0 and dot alignment with the rest

--- a/style.css
+++ b/style.css
@@ -33,13 +33,11 @@ body{
 }
 .button-section{
   flex: 5;
-  border-style: none;
   display: flex;
 }
 
 .numbers-and-auxilary-operators{
   flex: 3;
-  border-style: none;
   display: flex;
   flex-direction: column;
 }
@@ -47,17 +45,14 @@ body{
 .auxilary-operators{
   flex: 1;
   display: flex;
-  border-style: none;
 }
 
 .clear, .change-sign, .percentage{
   flex: 1;
-  border-style: none;
 }
 
 .numbers {
   flex: 4;
-  border-style: none;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -70,14 +65,13 @@ body{
 
 .number{
   flex: 1;
-  border-style: none;
 }
 
 .number0-dot{
   display: flex;
 }
-.number0{
-  flex:2;
+.number0.unit{
+  flex-basis: 240.54px;
 }
 .number-dot{
   flex: 1;
@@ -86,21 +80,19 @@ body{
 
 .operators{
   flex: 1;
-  border-style: none;
   display: flex;
   flex-direction: column;
 }
 
 .divide, .multiply, .subtract, .add, .equal-sign{
-  border-style: none;
   flex: 1;
 }
 
 /* Unit represents all the smallest blocks presented on the calculator */
 .unit {
-  border-radius: 10px;
   border-style: solid;
   border-width: 3px;
+  border-radius: 10px;
   font-size: 40px;
 }
 
